force-app/main/default/objects/NS_Sync_Request__c/NS_Sync_Request__c.object-meta.xml
<CustomObject>
    <label>Sync Request</label>
    <nameField>
        <displayFormat>NSR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>