force-app/main/default/objects/NS_Sync_Request__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>CompletedDate</label>
    <type>DateTime</type>
</CustomField>