force-app/main/default/objects/NS_Sync_Request__c/fields/ExtendedStatus__c.field-meta.xml
<CustomField>
    <fullName>ExtendedStatus__c</fullName>
    <label>ExtendedStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>