force-app/main/default/objects/NS_Sync_Request__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>JobType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>