force-app/main/default/objects/NS_Sync_Request__c/fields/LastProcessed__c.field-meta.xml
<CustomField>
    <fullName>LastProcessed__c</fullName>
    <label>LastProcessed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>