force-app/main/default/objects/NS_Sync_Request__c/fields/NumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberOfErrors__c</fullName>
    <label>NumberOfErrors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>