force-app/main/default/objects/NS_Sync_Request__c/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <label>Parent Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>