force-app/main/default/objects/NS_Sync_Request__c/fields/Source_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Link__c</fullName>
    <label>Source Object Link</label>
    <type>Url</type>
</CustomField>