force-app/main/default/objects/NS_Sync_Request__c/fields/Source_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Type__c</fullName>
    <description>Type of the record&apos;s object that needs to be synced E.g. Account, Order, Invoice etc....</description>
    <inlineHelpText>Type of the record&apos;s object that needs to be synced E.g. Account, Order, Invoice etc....</inlineHelpText>
    <label>Source Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>