force-app/main/default/objects/NS_Sync_Request__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Id object the record that needs to be synced to Netsuite.</description>
    <inlineHelpText>Id object the record that needs to be synced to Netsuite.</inlineHelpText>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>