force-app/main/default/objects/NS_Sync_Request__c/fields/TotalJobItems__c.field-meta.xml
<CustomField>
    <fullName>TotalJobItems__c</fullName>
    <inlineHelpText>TotalJobItems process by batch apex</inlineHelpText>
    <label>TotalJobItems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>